# fluence-template

./: Cargo.toml  Config.toml  LICENSE  README.md
configs/: deployment_cfg.json
scripts/: build.sh
src/: main.rs
