[package]
name = "{{ crate_name }}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
description = "{{project-name}}, a Marine wasi module"
license = "Apache-2.0"

[[bin]]
name = "{{ crate_name }}"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version="0.6.11", features=["logger"]}
log = "0.4.14"

[dev-dependencies]
marine-rs-sdk-test = "0.1.11"

[dev]
[profile.release]
opt-level = "s"
